# alembic-migration-practice

./: alembic.ini  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 80fa9bda4572_create_the_todo_table.py  93bd825160dc_add_the_task_done_column.py  af92f45bc9d9_add_the_student_table_in_database.py
config/: database.py
models/: todo_model.py
